Fix postedit modal height when pic is too big

--- a/app/assets/stylesheets/editpost_modal.scss
+++ b/app/assets/stylesheets/editpost_modal.scss
@@ -24,7 +24,7 @@
     left: 50%;
     padding: 10px;
     width: 550px;
-    // height: 620px;
+    max-height: 650px;
     background: white;
     border-radius: 7px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
