--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -211,6 +211,7 @@
 }
 
 .postpic_modal {
+    max-height: 350px;
     height: 50%;
     width: 50%;
     padding: 10px;
